# speechka_ai

./: .gitignore  README.md  docker-compose.yml  rebuild-ai.bat  rebuild-ai.sh  rebuild.bat  rebuild.sh  start.bat  start.sh
ai_predict_service/: .dockerignore  Dockerfile  main.py  requirements.txt
ai_predict_service/app/: config.py  main.py
ai_predict_service/app/database/: mongo_db.py
ai_predict_service/app/predict/: main_predict.py
ai_predict_service/app/repositories/: mongo.py
ai_predict_service/app/services/: diagnosis.py
ai_predict_service/app/utils/: clean.py  dataset_preparation.py  models.py  predict.py  train.py
ai_predict_service/predict/: main_predict.py
ai_predict_service/recommendation/: recommendation_logic.py  recommendation_text.py
ai_predict_service/utils/: train.py
ai_predict_service/utils/logs/: label_encoder.pkl  y_pred.csv
ai_predict_service/utils/models/: conv2d.h5
diagnosis/: Dockerfile  pyproject.toml  requirements.txt  test.py
diagnosis/app/: config.py  main.py  test_from_mongo.py
diagnosis/app/ai/: clean.py
diagnosis/app/ai/models/: conv2d.h5  predict.py
diagnosis/app/common/: aggregate_diagnosis.py  report_path.py
diagnosis/app/database/: mongo_db.py
diagnosis/app/kafka/consumers/: __init__.py  diagnosis.py
diagnosis/app/kafka/schemas/: diagnosis.py
diagnosis/app/repositories/: mongo.py
diagnosis/app/services/: diagnosis.py  send_report.py
diagnosis/app/utils/: background.py  consumer.py
telegram_bot/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
telegram_bot/app/: config.py  main.py
telegram_bot/app/clients/: base.py  diagnosis.py
telegram_bot/app/clients/requests/: diagnosis.py
telegram_bot/app/clients/responses/: diagnosis.py
telegram_bot/app/common/: enums.py
telegram_bot/app/content/: finished_answer_text.py  menu_command_text.py  non_voice_answer_text.py  recording_session_aborted_text.py  start_command_text.py  user_agreement_command_text.py  words.py
telegram_bot/app/database/: mongo_db.py
telegram_bot/app/database/seed_values/: seed_tongue_twisters.py
telegram_bot/app/fms/: recording_state.py  terms_agreement_state.py
telegram_bot/app/handlers/: diagnosis.py  recording.py  start.py  tongue_twister.py
telegram_bot/app/kafka/: producer.py
telegram_bot/app/keyboards/: menu.py  tongue_twister.py  training.py
telegram_bot/app/media/templates/: recommendation.html
telegram_bot/app/models/: recording_session.py
telegram_bot/app/repositories/: diagnosis.py  mongo.py  recording.py  recording_session.py  tongue_twister.py  user.py  user_training.py
telegram_bot/app/services/: diagnosis.py  mongo.py  training.py  user_tongue_twister.py  user_training.py
tg_bot_service/: .dockerignore  .env.example  .gitignore  Dockerfile  env.example  requirements.txt
tg_bot_service/app/: config.py  main.py
tg_bot_service/app/common/: enums.py  utils.py
tg_bot_service/app/content/: burr_recomendation_text.py  content.py  details_command_answer_text.py  menu_command_text.py  next_word_recording_answer_text.py  recording_session_aborted_text.py  start_command_text.py  start_recording_answer_text.py  terms_command_text.py  tongue_twisters.py  training.py  words.py
tg_bot_service/app/database/: database.py  seed_words.py
tg_bot_service/app/db/: database.py  db_helper.py  mongo_db.py  seed_words.py
tg_bot_service/app/diagnostic/: handlers.py  repositories.py  services.py  utils.py
tg_bot_service/app/fms/: terms_agreement_state.py
tg_bot_service/app/handlers/: __init__.py  details.py  diagnosis.py  menu.py  profile.py  recording.py  start.py  training.py  user.py  user_agreement.py
tg_bot_service/app/keyboards/: left_bar_menu.py  menu.py  sessions.py
tg_bot_service/app/menu/: handlers.py
tg_bot_service/app/models/: diagnosis.py  recording.py  recording_session.py  tongue_twister.py  training.py  user.py  user_tongue_twister.py  user_training.py  words.py
tg_bot_service/app/recording/: handlers.py  service.py
tg_bot_service/app/repositories/: diagnosis.py  mongo.py  recording.py  recording_session.py  training.py  user.py  user_tongue_twister.py  user_training.py  word.py
tg_bot_service/app/services/: diagnosis.py  mongo.py  recording.py  recording_session.py  toungue_twister.py  (+4 more)
tg_bot_service/src/: config.py  main.py
(+24 files in other folders)
