[tool.poetry]
name = "diagnosis"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
authors = ["scaliann <mishah238@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
"absl-py" = "2.3.1"
aiofiles = "24.1.0"
aiogram = "3.22.0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.12.15"
aiokafka = "0.12.0"
aiosignal = "1.4.0"
"annotated-types" = "0.7.0"
anyio = "4.11.0"
"astunparse" = "1.6.3"
"async-timeout" = "5.0.1"
attrs = "25.3.0"
audioread = "3.0.1"
certifi = "2025.8.3"
cffi = "2.0.0"
"charset-normalizer" = "3.4.3"
click = "8.3.0"
colorama = "0.4.6"
contourpy = "1.3.3"
cycler = "0.12.1"
decorator = "5.2.1"
dnspython = "2.8.0"
fastapi = "0.117.1"
flatbuffers = "25.2.10"
fonttools = "4.60.0"
frozenlist = "1.7.0"
gast = "0.6.0"
"google-pasta" = "0.2.0"
greenlet = "3.2.4"
grpcio = "1.75.0"
h5py = "3.14.0"
idna = "3.10"
joblib = "1.5.2"
kapre = "0.3.7"
keras = "3.11.3"
"Keras-Applications" = "1.0.8"
"Keras-Preprocessing" = "1.1.2"
kiwisolver = "1.4.9"
lazy_loader = "0.4"
libclang = "18.1.1"
librosa = "0.11.0"
llvmlite = "0.45.0"
"magic-filter" = "1.0.12"
Markdown = "3.9"
"markdown-it-py" = "4.0.0"
MarkupSafe = "3.0.2"
matplotlib = "3.10.6"
mdurl = "0.1.2"
ml_dtypes = "0.5.3"
motor = "3.7.1"
msgpack = "1.1.1"
multidict = "6.6.4"
mypy_extensions = "1.1.0"
namex = "0.1.0"
numba = "0.62.0"
numpy = "2.3.3"
opt_einsum = "3.4.0"
optree = "0.17.0"
packaging = "25.0"
pandas = "2.3.2"
pathspec = "0.12.1"
pillow = "11.3.0"
platformdirs = "4.4.0"
pooch = "1.8.2"
propcache = "0.3.2"
protobuf = "6.32.1"
pycparser = "2.23"
pydantic = "2.11.9"
"pydantic-settings" = "2.10.1"
pydantic_core = "2.33.2"
Pygments = "2.19.2"
pymongo = "4.15.1"
pyparsing = "3.2.5"
"python-dateutil" = "2.9.0.post0"
"python-dotenv" = "1.1.1"
pytokens = "0.1.10"
pytz = "2025.2"
requests = "2.32.5"
rich = "14.1.0"
scikit-learn = "1.7.2"
scipy = "1.16.2"
setuptools = "80.9.0"
six = "1.17.0"
sniffio = "1.3.1"
soundfile = "0.13.1"
soxr = "1.0.0"
SQLAlchemy = "2.0.43"
starlette = "0.48.0"
tensorboard = "2.20.0"
"tensorboard-data-server" = "0.7.2"
tensorflow = "2.20.0"
termcolor = "3.1.0"
threadpoolctl = "3.6.0"
tqdm = "4.67.1"
"typing-inspection" = "0.4.1"
typing_extensions = "4.15.0"
tzdata = "2025.2"
urllib3 = "2.5.0"
wavio = "0.0.9"
Werkzeug = "3.1.3"
wheel = "0.45.1"
wrapt = "1.17.3"
yarl = "1.20.1"

[tool.poetry.group.dev.dependencies]
black = "25.9.0"
ruff = "0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
