[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
authors = ["scaliann <mishah238@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
aiofiles = "24.1.0"
aiogram = "3.20.0.post0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.18"
aiokafka = "0.12.0"
aiosignal = "1.3.2"
aiosqlite = "0.21.0"
annotated-types = "0.7.0"
anyio = "4.9.0"
async-timeout = "5.0.1"
asyncpg = "0.30.0"
attrs = "25.3.0"
brotli = "1.1.0"
certifi = "2025.6.15"
cffi = "1.17.1"
charset-normalizer = "3.4.3"
click = "8.2.1"
colorama = "0.4.6"
cssselect2 = "0.8.0"
dnspython = "2.7.0"
fastapi = "0.116.1"
fonttools = "4.60.0"
fpdf = "1.7.2"
frozenlist = "1.7.0"
greenlet = "3.2.3"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
jinja2 = "3.1.6"
magic-filter = "1.0.12"
markupsafe = "3.0.2"
motor = "3.7.1"
multidict = "6.5.0"
mypy-extensions = "1.1.0"
numpy = "2.3.1"
packaging = "25.0"
pathspec = "0.12.1"
pdfkit = "1.0.0"
pillow = "11.3.0"
platformdirs = "4.3.8"
propcache = "0.3.2"
pycparser = "2.22"
pydantic = "2.11.7"
pydantic-settings = "2.9.1"
pydantic-core = "2.33.2"
pydub = "0.25.1"
pydyf = "0.11.0"
pymongo = "4.14.1"
pyphen = "0.17.2"
python-dotenv = "1.1.0"
setuptools = "80.9.0"
sniffio = "1.3.1"
soundfile = "0.13.1"
sqlalchemy = "2.0.41"
starlette = "0.47.3"
tinycss2 = "1.4.0"
tinyhtml5 = "2.0.0"
typing-inspection = "0.4.1"
typing-extensions = "4.14.0"
weasyprint = "66.0"
webencodings = "0.5.1"
wheel = "0.45.1"
yarl = "1.20.1"
zopfli = "0.2.3.post1"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
